# Traffic-Capacity

./: .clang-format  .clang-tidy  .cmake-format  .gitmodules  CMakeLists.txt  README.md
cmake/: options.cmake
example/: CMakeLists.txt
example/configs/: PeremohyAvenue.json
example/getTrafficCapacity/: CMakeLists.txt  main.cpp
example/getTrafficCapacity/CTrafficApp/: CMakeLists.txt  CTrafficApp.cpp  CTrafficApp.hpp
exampleConfigs/: PeremohyAvenue.json
src/: CMakeLists.txt  main.cpp
src/TrafficApp/: CMakeLists.txt  TrafficApp.cpp  TrafficApp.hpp
src/UnitTests/: main.cpp
src/app/: CMakeLists.txt  main.cpp
src/app/CTrafficApp/: CMakeLists.txt  CTrafficApp.cpp  CTrafficApp.hpp
src/functions/: CMakeLists.txt
src/functions/ssd/: CMakeLists.txt  CStoppingSightDistance.cpp
src/include/trcp/: trcp.hpp
src/include/trcp/common/: SPoint.hpp  SRoad.hpp  STimeInterval.hpp
src/include/trcp/functions/ssd/: CStoppingSightDistance.hpp  IStoppingSightDistance.hpp
src/include/trcp/utils/: CReaderFromJson.hpp  IReader.hpp
src/trafficCapacityLib/: CMakeLists.txt
src/trafficCapacityLib/common/data/: CMakeLists.txt
src/trafficCapacityLib/common/data/SPoint/: CMakeLists.txt
src/trafficCapacityLib/common/data/SRoad/: SRoad.cpp  SRoad.hpp
src/trafficCapacityLib/common/data/STimeInterval/: STimeInterval.cpp
src/trcpLib/: CMakeLists.txt
src/trcpLib/common/: CMakeLists.txt
src/trcpLib/common/data/SPoint/: SPoint.cpp  SPoint.hpp
src/trcpLib/common/data/SRoad/: CMakeLists.txt  SRoad.cpp
src/trcpLib/trcp/: trcp.hpp
src/trcpLib/utils/reader/: CMakeLists.txt  IReader.hpp
src/utils/reader/: CMakeLists.txt  CReaderFromJson.cpp
(+5 files in other folders)
